# omdbrust

./: .env  Cargo.toml  README.md
src/: controller.rs  main.rs  service.rs  structure.rs
