[package]
name = "omdbrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bson = "2.6.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
mongodb = {version = "2.4.0", default_features = false, features = ["sync"]}
regex = "1.7.3"
reqwest = {version = "0.11.16", features = ["blocking", "json"]}
serde = "1.0.159"
serde_json = "1.0.95"
